hphp/hack/test/typecheck/new_inference/tconst/tconst_on_generics5.php.exp
File "tconst_on_generics5.php", line 39, characters 14-17:
Some type constraint(s) here are violated (Typing[4090])
File "tconst_on_generics5.php", line 25, characters 31-32:
'T1' is a constrained type parameter
File "tconst_on_generics5.php", line 25, characters 81-81:
Could not find type constant T in type B
File "tconst_on_generics5.php", line 4, characters 7-7:
Declaration of B is here
